# rance-blog

./: .coveragerc  .gitignore  README.md  deploy_rocky.sh  fabfile.py  local.yml  production.yml  pyproject.toml  requirements.txt
blog/: admin.py  elasticsearch2_ik_backend.py  feeds.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_post_options_and_more.py  0003_alter_post_options.py  0004_post_views.py
blog/templatetags/: blog_extras.py
blog/tests/: test_models.py  test_templatetags.py  test_views.py
comments/: models.py
comments/migrations/: 0001_initial.py  0002_alter_comment_options.py
comments/tests/: base.py  test_templatetags.py  test_views.py
compose/local/: Dockerfile  start.sh
compose/production/django/: Dockerfile  start.sh
compose/production/elasticsearch/: Dockerfile  elasticsearch.yml
compose/production/nginx/: Dockerfile  rance-blog.conf
config/: settings.py  urls.py
config/settings/: common.py  local.py  production.py
database/: README.md
doc/: 开发环境搭建指南.md  技术选型方案.md  架构设计文档.md  部署文档.md  阶段关键代码.md  项目中遇到的问题解决.md  项目开发计划.md  项目接口文档.md  项目数据库表设计.md
scripts/: fake.py
templates/: base.html
templates/blog/: detail.html  index.html
templates/blog/inclusions/: _archives.html
templates/pure_pagination/: pagination.html
templates/search/: search.html
