[project]
name = "rance-blog"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2,<6.0",
    "markdown>=3.10.2",
    "gunicorn>=23.0",
    "invoke>=3.0.3",
    "fab-classic>=1.21.0",
    "faker>=40.23.0",
    "django-pure-pagination>=0.3.0",
    "django-haystack>=3.4.0",
    "elasticsearch>=7.0.0,<8.0.0",
]
